Perf: Docker Image 최적화